--- a/WEBD1000-W0474627_HTML_CSS_Skills_Development.css
+++ b/WEBD1000-W0474627_HTML_CSS_Skills_Development.css
@@ -27,3 +27,11 @@
     background-color: #008CBA;
     color: white;
 }
+
+footer {
+    align-items: center;
+    background-color: #777;
+    padding: 10px;
+    text-align: center;
+    color: white;
+}
