--- a/WEBD1000-W0474627_HTML_CSS_Skills_Development.css
+++ b/WEBD1000-W0474627_HTML_CSS_Skills_Development.css
@@ -23,6 +23,22 @@
     color: white;
 }
 
+div.absolute {
+    position: absolute;
+    top: 80px;
+    right: 0;
+    width: 200px;
+    height: 100px;
+    border: 3px solid #73AD21;
+}
+
+div.relative {
+    position: relative;
+    width: 400px;
+    height: 200px;
+    border: 3px solid #73AD21;
+}
+
 .button_exercise8:hover {
     background-color: #008CBA;
     color: white;
@@ -35,3 +51,5 @@ footer {
     text-align: center;
     color: white;
 }
+
+@ media
