--- a/RideShareSite/style.css
+++ b/RideShareSite/style.css
@@ -1,3 +1,6 @@
+.container_header {
+   text-align: center;
+}
 body {
     margin: 0;
     padding: 0;
@@ -103,6 +106,3 @@ footer {
    text-align: center;
 }
 
-@media screen {
-   
-}
