--- a/RideShareSite/style.css
+++ b/RideShareSite/style.css
@@ -43,14 +43,14 @@ body {
  .hero-subtitle {
     font-size: 2rem;
     font-weight: 200;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
  }
  .hero-button {
-    background-color: #ae2d59;
+    background-color: #0F427A;
     color: white;
-    border: 1px solid #cb376a;
-    margin-top: 5rem;
-    padding: 0.9375rem1.875rem;
+    border: 1px solid #0F427A;
+    margin-top: 3rem;
+    padding: 0.7rem 2rem;
     font-family: "Monserrat", sans-serif;
     font-size: 1.125rem;
     font-weight: 200;
@@ -58,8 +58,8 @@ body {
     size: 10cm;
  }
  .hero-button:hover {
-    background-color: #cb376a;
-    border: 1px solid #db7598;
+    background-color: green;
+    border: 1px solid green;
  }
  .navbar-brand {
     font-size: x-large;
@@ -68,29 +68,25 @@ body {
 /* Styling for testimonials */
 .container_testimonial {
   border: 1px solid #ccc;
-  background-color: #eee;
+  background-color: #F8F8F8;
   border-radius: 5px;
   padding: 16px;
-  margin: 16px 0
+  margin: 16px 0;
 }
-
 .container_testimonial::after {
   content: "";
   clear: both;
   display: table;
 }
-
 .container_testimonial img {
   float: left;
   margin-right: 20px;
   border-radius: 50%;
 }
-
 .container_testimonial span {
   font-size: 20px;
   margin-right: 15px;
 }
-
 @media (max-width: 500px) {
    .container_testimonial {
       text-align: center;
@@ -106,3 +102,51 @@ footer {
    text-align: center;
 }
 
+/* Become a driver/rider styling */
+.driver_learn_more {
+   background-color: #F8F8F8;
+   border: none;
+   color: #0F427A;
+   padding: 10px 32px;
+   text-align: left;
+   display: inline-block;
+   font-size: 16px;
+}
+.driver_learn_more:hover {
+   background-color: #0F427A;
+   border: 1px solid #ccc;
+   color: white;
+}
+.rider_learn_more {
+   background-color: #F8F8F8;
+   border: none;
+   color: #0F427A;
+   padding: 10px 32px;
+   text-align: left;
+   display: inline-block;
+   font-size: 16px;
+}
+.rider_learn_more:hover {
+   background-color: #0F427A;
+   border: 1px solid #ccc;
+   color: white;
+}
+h1 {
+   color: #0F427A;
+}
+
+.container_header {
+   color: #0F427A;
+}
+
+.row {
+   color: #0F427A;
+}
+
+.container_testimonial_section {
+   color: #0F427A;
+}
+
+.container {
+   color: #0F427A;
+}
