--- a/TheFlickPoet/style.css
+++ b/TheFlickPoet/style.css
@@ -1,5 +1,5 @@
- /*  Hero Section Styling */
- .hero {
+/*  Hero Section Styling */
+.hero {
     position: relative;
     width: 100vw;
     height: 100vh;
@@ -14,7 +14,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(../TheFlickPoet/images/TFP.jpg);
+    background: url(images/TFP.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -38,9 +38,9 @@
     margin-top: 0.5rem;
  }
  .hero-button {
-    background-color: #0F427A;
-    color: white;
-    border: 1px solid #0F427A;
+    background-color: white;
+    color: black;
+    border: 1px solid white;
     margin-top: 3rem;
     padding: 0.7rem 2rem;
     font-family: "Monserrat", sans-serif;
@@ -50,8 +50,8 @@
     size: 10cm;
  }
  .hero-button:hover {
-    background-color: green;
-    border: 1px solid green;
+    background-color: #ddd;
+    border: 1px solid #ddd;
  }
  .navbar-brand {
     font-size: x-large;
