--- a/WEBD1000-W0474627_HTML_CSS_Skills_Development.css
+++ b/WEBD1000-W0474627_HTML_CSS_Skills_Development.css
@@ -16,7 +16,7 @@
     margin: 0;
 }
 
-.flex_container_exercise6 {
+#flex_container_exercise6 {
     display: flex;
     flex-wrap: nowrap;
     background-color: black;
