--- a/RideShareSite/style.css
+++ b/RideShareSite/style.css
@@ -75,8 +75,11 @@ body {
 .dropoff, .pickup, .search_button {
    border-radius: 4px;
    border: none;
-   padding: 5px;
+   padding: 7px;
    font-family: "Monserrat", sans-serif;
+   display: inline-block;
+   margin-top: 0.3rem;
+   font-size: 1rem;
 }
 #form {
    padding: 5px;
@@ -211,7 +214,7 @@ footer {
 .whatsapp {
    max-width: 20px;
 }
-.container_socials {
+#container_socials {
    padding: 20px;
 }
 footer {
@@ -221,4 +224,5 @@ footer {
    padding-top: 30px;
    border-top: solid;
    border-color: #e6e5e5;
+   border-width: 1px;
 }
