--- a/RideShareSite/style.css
+++ b/RideShareSite/style.css
@@ -64,7 +64,10 @@ body {
    display: inline-block;
    margin-top: 0.3rem;
    font-size: 1rem;
-   width: 80%;
+   width: 35%;
+}
+@media only screen and (max-width: 500px) {
+   .dropoff, .pickup, .search_button { width: 100%;}
 }
 #form {
    padding: 5px;
