--- a/RideShareSite/style.css
+++ b/RideShareSite/style.css
@@ -66,7 +66,10 @@ body {
    font-size: 1rem;
    width: 35%;
 }
-@media only screen and (max-width: 500px) {
+@media screen and (max-width: 1200px) {
+   .dropoff, .pickup, .search_button { width: 50%;}
+}
+@media screen and (max-width: 500px) {
    .dropoff, .pickup, .search_button { width: 100%;}
 }
 #form {
