--- a/RideShareSite/style.css
+++ b/RideShareSite/style.css
@@ -66,7 +66,7 @@ body {
    font-size: 1rem;
    width: 100%;
 }
-@media screen and (max-width: 800px) {
+@media screen and (min-width: 900px) {
    .dropoff, .pickup, .search_button { width: 35%;}
 }
 #form {
