--- a/RideShareSite/style.css
+++ b/RideShareSite/style.css
@@ -218,6 +218,9 @@ footer {
    border-top: solid;
    border-color: #e6e5e5;
    border-width: 1px;
+#footer3 {
+   color: gray;
+}
 }
 #div_socials {
    align-content: center;
