--- a/RideShareSite/style.css
+++ b/RideShareSite/style.css
@@ -47,6 +47,7 @@ body {
    color: white;
    text-align: center;
    margin: 0.625rem;
+   align-items: center;
 }
 .hero-title {
    font-size: 3rem;
@@ -221,9 +222,6 @@ footer {
    border-top: solid;
    border-color: #e6e5e5;
    border-width: 1px;
-#footer3 {
-   color: gray;
-}
 }
 #div_socials {
    align-content: center;
