--- a/PersonalPortfolio/style.css
+++ b/PersonalPortfolio/style.css
@@ -8,7 +8,7 @@
 /*  Home Section Styling */
 .flex-item-left {
     background-color: black;
-    padding: 20px;
+    padding: 10px;
     flex: 50%;
     border-radius: 15px;
     text-align: left;
@@ -16,16 +16,21 @@
 .flex-item-right {
     border-radius: 15px;
     background-color: black;
-    padding: 20px;
+    padding: 10px;
     flex: 50%;
     text-align: left;
   }
   /* Responsive layout - makes a one column-layout instead of a two-column layout */
 @media (max-width: 700px) {
     .flex-item-right, .flex-item-left {
-      flex: 100%;
+        flex: 100%;
     }
   }
+@media (max-width: 700px) {
+    .flex_1 {
+        font-size: small;
+    }
+}
 b {
     color: #295985;
 }
