--- a/TheFlickPoet/style.css
+++ b/TheFlickPoet/style.css
@@ -56,3 +56,13 @@
  .navbar-brand {
     font-size: x-large;
  }
+
+ ul {
+   float: right;
+ }
+ li {
+   text-align: right;
+ }
+ .navbar-toggler {
+   margin-right: 5px;
+ }
