--- a/PersonalPortfolio/style.css
+++ b/PersonalPortfolio/style.css
@@ -11,11 +11,9 @@
     background-color: black;
     padding: 10px;
     flex: 50%;
-    border-radius: 15px;
     text-align: left;
   }
 .flex-item-right {
-    border-radius: 15px;
     background-color: black;
     padding: 10px;
     flex: 50%;
@@ -29,7 +27,7 @@
   }
 @media (max-width: 700px) {
     .flex_1 {
-        font-size: smaller;
+        font-size: small;
     }
 }
 b {
